Fix coroutine EDT idioms, tooltip rendering, and tab-restore bug
Adopts withContext(Dispatchers.EDT)/blockingContextScope over
invokeLater in suspend contexts, switches raw-HTML tooltips to
HelpTooltipKt/HtmlChunk so tags render correctly, and renames the
two/three-dots checkbox state to match its actual meaning.

Also fixes ViewService.save() persisting a tab index that could
point past the restored collection when a New* tab was active,
which showed a blank tab on next launch. Cleans up dead null
checks, duplicated code, and a few Math.clamp/getFirst()
simplifications flagged by inspections.